--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -8,7 +8,7 @@
  educate_ruler_title:0 "Educate Ruler"
  educate_ruler_desc:0 "Our ruler evidently struggles with the basics of running the realm. It would be wise to invest in some tutors to avoid further disasters."
  educate_ruler_tooltip:0 "Ruler has less than 7 total skill"
- PR_critical_events_title:0 "§G§ Available Critical Events §W"
+ PR_critical_events_title:0 "§GAvailable Critical Events§!"
  PR_critical_events_desc:0 "Check to see which critical events are still available, a green tick indicates it is available and a red cross indicates it has already been fired"
  PR_radical_reform_decision:0 "Radical Reforms"
  PR_military_reform_decision:0 "Military Reforms"
@@ -20,7 +20,7 @@
  enlist_rajputs_desc:0 "Rajputs, one of the 4 Varnas of our society, have always led the political authority of the preceding states in the region. Though their religions are numerous thanks to the missionary works of Muslim Traders and Therevada Buddhists, their ancestral tribes and ties still bind them to one another. Let us ignore their religious differences and instead fuel our armies with this warrior class."
  crimea_form_the_hetmanate_title:0 "Unite the Steppes"
  crimea_form_the_hetmanate_desc:0 "Centuries ago our Great Father united our ancestors in their ancient homeland. He died leaving his sons to squabble and split his mighty empire into petty fiefs, small, weak and unworthy of his legacy! The disjointed remnants still sweep across the steppes instilling fear in the hearts of his enemies just like the Great Mongol army once did.\nNo more! A worthy people still carrying the banner of his legacy ride across these lands! While we now bow before a new God, the blood of Genghis Khan still flows through our veins. We are the heirs of Genghis and we are coming for what is rightfully ours!"
- gc_war_taxes_notification_title:0 "§R§ WAR TAXES ARE ON! §W"
+ gc_war_taxes_notification_title:0 "§RWAR TAXES ARE ON§!"
  gc_war_taxes_notification_desc:0 "You are paying War Taxes. You might want to deactivate them."
  great_zimbabwe_title:0 "Proclaim Great Zimbabwe"
  great_zimbabwe_desc:0 "We must unite East Africa and proclaim Great Zimbabwe."
@@ -33,12 +33,12 @@
  urbanisation_desc:0 "50 years of reduced power cost, increased goods produced and cheaper construction cost. No longer part of the normal Golden Age ability."
  sm_hire_recruitmaster_title:0 "Hire a -25% Cost Master Recruiter"
  sm_hire_recruitmaster_desc:0 "It would be wise to use the foreign expertise available to us to help bring fresh manpower into our ranks."
- sm_hire_naval_reformer_title:0 "§G§ Hire a Naval Reformer §W"
+ sm_hire_naval_reformer_title:0 "§OHire a Naval Reformer§!"
  sm_hire_naval_reformer_desc:0 "Hire a naval expert to reform our navies."
- PR_manpower_edict_title:0 "§M§ National Manpower Edict §W"
+ PR_manpower_edict_title:0 "§RNational Manpower Edict§!"
  PR_manpower_edict_desc:0 "Activate a manpower edict modifier in all states without an activated edict. No edicts can be applied to states with this modifier. Can be removed in 1 year."
  PR_manpower_edict_tooltip:0 "+§Y25%§! Manpower and +§R200%§! State Maintenance in all states without an active edict"
- PR_manpower_edict_removal_title:0 "§M§ Deactivate National Manpower Edict §W"
+ PR_manpower_edict_removal_title:0 "§RDeactivate National Manpower Edict§!"
  PR_manpower_edict_removal_desc:0 "Removes manpower edict modifier from all provinces."
  PR_manpower_edict_cooldown:0 "Provincial Manpower Edict"
  PR_manpower_edict_removal_tooltip:0 "Has been 1 year since activating National Manpower Edict."
@@ -49,7 +49,7 @@
  subjugate_mamluks_desc:0 ""
  h_found_riyadh_title:0 "Found the City of Riyadh"
  h_found_riyadh_desc:0 "With the construction of the walled oases, the Najd has become the center of our empire in all but name. Let us construct a new capital for Arabia in Kharj. It will take the name 'Riyadh', after the gardens of the local oases."
- gecko_recruit_military_advisor_title:0 "§T§ Recruit Military Advisor §W"
+ gecko_recruit_military_advisor_title:0 "§JRecruit Military Advisor§!"
  gecko_recruit_military_advisor_desc:0 ""
  gecko_debt_title:0 "Tackle the National Debt"
  gecko_debt_desc:0 "Attempt to lessen the debt burden faced by our country. This will stand down our armies for the duration."
@@ -97,13 +97,13 @@ gc_hungary_change_paths_1_tooltip:0 "This will allow us to pursue our claims in 
 gc_hungary_change_paths_2_tooltip:0 "This will allow us to pursue our interests in Anatolia. However we will abandon our claims in Europe."
 
 #mercs
-splendor_mercs_1_title:0 "§Y§ 3. Recruit Surplus Mercenaries §W"
+splendor_mercs_1_title:0 "§Y3. Recruit Surplus Mercenaries§!"
 splendor_mercs_1_desc:0 "Allows further Mercenary recruitment to Mercenary Forcelimit."
 
-splendor_mercs_2_title:0 "§Y§ 2. Hire Further Mercenaries §W"
+splendor_mercs_2_title:0 "§Y2. Hire Further Mercenaries§!"
 splendor_mercs_2_desc:0 "Hire Mercenaries in bulk."
 
-Show_Merc_limit_title:0 "§Y§ 1. Show Mercenary Forcelimit §W"
+Show_Merc_limit_title:0 "§Y1. Show Mercenary Forcelimit§!"
 Show_Merc_limit_desc:0 "This is our Mercenary Forcelimit. If we go over this, any newly created Mercenary Company will be disbanded with no refund."
 gecko_merc_limit_tt:0 "Manually Update Mercenary Forcelimit"
 gecko_increased_merc_limit_tt:0 "This will §GIncrease our Available Mercenaries by +15%§!, but they will have -§R15.0% Morale§! for 10 Years."
