--- a/localisation/tmm_l_english.yml
+++ b/localisation/tmm_l_english.yml
@@ -98,6 +98,7 @@
  UPGRADE_GREAT_PROJECT:0 "Starts the upgrade of the $TYPE$ $NAME|Y$."
  hagia_sophia:0 "Hagia Sophia"
  stonehenge:0 "Stonehenge"
+ stonehenge_desc:0 ""
  tower_of_london:0 "Tower of London"
  buddha_statues:0 "Buddha Statues"
  parthenon:0 "Parthenon"
@@ -307,6 +308,10 @@
  HAS_NOT_SUBJECT_TYPE:0 "Has no $SUBJECTTYPE$.\n"
  HAS_RELIGION:0 "Religion in $PROVINCE|Y$ is $RELIGION|Y$"
  HAS_NOT_RELIGION:0 "Religion in $PROVINCE|Y$ is not $RELIGION|Y$"
+ HAS_ENFORCED_RELIGION:1 "Has been forced to change religion"
+ HAS_ENFORCED_RELIGION_UNTIL:1 "Has been forced to change religion (until $UNTIL|Y$)"
+ HAS_NOT_ENFORCED_RELIGION:0 "Has not been forced to change religion"
+ HAS_NOT_ENFORCED_RELIGION_UNTIL:0 "Has not been forced to change religion (until $UNTIL|Y$)"
  BREAK_ALLIANCE_CANNOT_COST:0 "You need at least §Y$COST$§! Favors with §Y$COUNTRY$§! to ask them to Break an Alliance."
  BREAK_ALLIANCE_CANNOT_OPINION:0 "You need at least §Y$OPINION$§! Opinion with §Y$COUNTRY$§! to ask them to Break an Alliance."
  BREAK_ALLIANCE_CANNOT_NOT_ALLIES:0 "You need to be allied with §Y$COUNTRY$§! to ask them to Break an Alliance."
@@ -839,7 +844,7 @@
  TRADE_FAVORS_FOR_WAR_PREP_CANNOT_ALLIANCE:0 "You need an alliance with §Y$COUNTRY$§! to ask them to prepare for War."
  TRADE_FAVORS_FOR_WAR_PREP_CANNOT_ALREADY_PREPPING:0 "§Y$COUNTRY$§! are already preparing for War."
  TRADE_FAVORS_FOR_WAR_PREP_CANNOT_OPINION:0 "You need at least §Y$OPINION$§! Opinion with §Y$COUNTRY$§! to ask them to prepare for War."
- TRADE_FAVORS_FOR_WAR_PREP_DESC2:0 "Spend $FAVOR|Y$ Favorsto ask them to prepare for War."
+ TRADE_FAVORS_FOR_WAR_PREP_DESC2:0 "Spend $FAVOR|Y$ Favors to ask them to prepare for War."
  TRADE_FAVORS_FOR_WAR_PREP_DESC:0 "We will ask $RECIPIENT|Y$ to prepare for War in exchange for $FAVOR|Y$ Favors."
  TRADE_FAVORS_FOR_WAR_PREP_REQDESC:0 "$ACTOR$ is asking us to prepare for War in exchange for favors. Do you accept?"
  CALL_CHECKBOX_ALLY:0 "§RYou cannot declare a country you are allied with as a co-belligerent.§!"
@@ -940,7 +945,7 @@
  HAS_OR_BUILDING_FLAGSHIP:0 "Country has or is building a Flagship"
  HAS_NOT_OR_BUILDING_FLAGSHIP:0 "Country does not have a Flagship and is not building one"
  GREAT_PROJECT_CANNOT_BE_MOVED:0 "$GREATPROJECT|Y$ cannot be moved, it is too large."
- CLAIM_STRENGTH_TOOLTIP:0 "$NAME|Y$ has a claim strength of $VAL|Y$. This will become his Legitimacy when he ascends to the throne."
+ CLAIM_STRENGTH_TOOLTIP:2 "$NAME|Y$ has a claim strength of $VAL|Y$. This will become [Root.Heir.GetHerHis] Legitimacy when [Root.Heir.GetSheHe] ascends to the throne."
  CLAIM_STRENGTH_INCREASE_TOOLTIP:0 "Claim strength increases by $AMOUNT|Y$ per month."
  MOVE_GREAT_PROJECT_EXPLANATION:0 "It will cost $CASH|Y$¤ to move $GREATPROJECT|Y$ to your capital. This is based on a distance of $DIST$ and an estimate of $DAYS$ days to move each unit of distance, multiplied by a cost of $COSTPERDAY$¤ per day to move it."
  TRADE_FAVORS_FOR_HEIR_CANNOT_DYNASTY_LOCKED:0 "§Y$COUNTRY$§! cannot have an heir from a different Dynasty."
@@ -1434,6 +1439,20 @@
  CAROLEAN_REGIMENT_TYPE:0 "Carolean"
  STATE_CAWA_CREATED_REGIMENTS:0 "This will cost $MILAMOUNT|Y$ £mil£, and $NUM|Y$ Tercio will spawn in $PROV|Y$.\nDo you want to create a Tercio regiment?"
  CAWA_FROM_TT:0 "§YTercio Forcelimit§!\nThis is the amount of current and possible Tercio our nation can have.\n\nTercio are raised from the state's full core provinces.\n\n$NAME$ provide $AMOUNT|Y$ Force Limit of Tercio due to the development in:\n"
+ CAWA_NAME:0 "$HOME$'s $NUM$$ORDER$ Tercio"
+ MODIFIER_AMOUNT_OF_CAWA:0 "Possible Tercio"
+ MODIFIER_LOCAL_AMOUNT_OF_CAWA:0 "Possible Tercio"
+ mechanic_allow_cawa_yes:0 "Allows recruiting Tercio"
+ mechanic_allow_cawa_no:0 ""
+ CAWA_CANT_HAVE:0 "Your nation cannot raise Tercio."
+ CAWA_DESC:0 "Tercio."
+ REGCAT_cawa:0 "Tercio"
+ CAWA_REGIMENT:0 "Tercio Regiment\n$EFFECT$"
+ HAVE_LESS_CAWA_THAN:0 "Have less Cawa Regiments than $VALUE|Y$.\n"
+ HAVE_AT_LEAST_CAWA_THAN:0 "Have at least $VALUE|Y$ Tercio Regiments.\n"
+ CAWA_REGIMENT_TYPE:0 "Tercio"
+ ONLY_CAWA_MODIFIER:0 "§YAffects only Tercio Regiments§!"
+ CREATECAWA:0 "Conscript Tercio"
  CHANGE_CULTURE_CANNOT_GOV_REFORMS:0 "Your Government Reforms prevent changing your Primary Culture."
  CARPET_SIEGE_NOWHERE_TO_SIEGE:0 "No Provinces in this Area are controlled by your enemies."
  CARPET_SIEGE_SIEGED_BY:0 "Currently being Autonomously Sieged by $UNIT|Y$"
