--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -49,7 +49,7 @@
  subjugate_mamluks_desc:0 ""
  h_found_riyadh_title:0 "Found the City of Riyadh"
  h_found_riyadh_desc:0 "With the construction of the walled oases, the Najd has become the center of our empire in all but name. Let us construct a new capital for Arabia in Kharj. It will take the name 'Riyadh', after the gardens of the local oases."
- gecko_recruit_military_advisor_title:0 "§JRecruit Military Advisor§!"
+ gecko_recruit_military_advisor_title:0 "§TRecruit Military Advisor§!"
  gecko_recruit_military_advisor_desc:0 ""
  gecko_debt_title:0 "Tackle the National Debt"
  gecko_debt_desc:0 "Attempt to lessen the debt burden faced by our country. This will stand down our armies for the duration."
