--- a/localisation/GME_Monuments_l_english.yml
+++ b/localisation/GME_Monuments_l_english.yml
@@ -162,7 +162,7 @@
 
 #Poland
  gme_cathedral_poznan: "Cathedral of Poznan"
- gme_jagielon_university: "Jagiellonian Univeristy"
+ gme_jagielon_university: "Jagiellonian University"
  gme_lazienki_park: "Lazienki Park"
  gme_saint_mary_basilica: "Saint Mary's Basilica "
  gme_salt_mines_wieliczka_bochnia: "Salt Mines of Wieliczka and Bochnia"
