Collapse of Great Horde event + on_action added.

--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -428,11 +428,18 @@
  X_CRI_events.9.d1:0 ""
  X_CRI_events.9.a:0 "Welcome them to our yurt"
  X_CRI_events.9.b:0 "They will have to find another way"
+ X_CRI_events.10.t:0 "Collapse of the Great Horde"
+ X_CRI_events.10.d1:0 ""
+ X_CRI_events.10.a:0 "A disastrous betrayal"
+ X_CRI_events.11.t:0 "Death of Küchük Muhammad"
+ X_CRI_events.11.d1:0 ""
+ X_CRI_events.11.a:0 "A most auspicious moment for us to strike"
  #Event Tooltips
  X_CRI_event_2_tt:0 "§Y[Root.GetName]§! gains a permanent claim on all §YTatar§! provinces.§!"
  X_CRI_event_6_tt:0 "Upon being built, we gain §G+5.0§!£X_imperial_mandate£.\nIf §Y[284.GetName]§! has a §YGreat Mosque§!, gain §Y3§! Base Tax in §Y[284.GetName]§!.\nElse gain a §YGreat Mosque§! in §Y[284.GetName]§!."
  X_CRI_event_8_tt:0 "We shall pay §Y[GEN.X_gazaria_total_development_localization_variable.GetValue]§!¤ to §Y[GEN.GetName]§! for control of their possesions in the §Y[284.GetRegionName]§!."
  X_CRI_event_8_tt2:0 "Peacefully resolving our border tensions with §Y[GEN.GetName]§! will result in the §Y[GEN.GetAdjective]§! commercial colony of §Y[286.GetCapitalName]§! to become a center of trade in §Y[286.GetName]§!."
+ X_CRI_event_11_tt:0 "§Y[Root.GetName]§! gains a permanent claim on every owned province of §Y[GOL.GetName]§!."
  #Diplomatic Actions
  X_declarewar_diplomatic_actions_tt:0 "§RYou cannot declare on a tributary of a nation, if you are already at war with that nation.§!"
  X_declarewar_diplomatic_actions_tt2:0 "§RTributary States can't fight their own wars.§!"
