--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -8,12 +8,14 @@
  # Estates
  ####################
  #Estates
- x_estate_streltsy:0 "Streletskaya"
- x_estate_streltsy_desc:0 ""
- X_estate_streltsy_loyalty_modifier:0 "Streletskaya Loyalty Equilibrium"
- X_estate_streltsy_influence_modifier:0 "Streletskaya Influence"
- x_estate_streltsy_ownership:0 "Streletskaya Land Ownership"
+ x_rus_estate_streltsy:0 "Streletskaya"
+ x_rus_estate_streltsy_desc:0 ""
+ X_RUS_estate_streltsy_loyalty_modifier:0 "Streletskaya Loyalty Equilibrium"
+ X_RUS_estate_streltsy_influence_modifier:0 "Streletskaya Influence"
+ x_rus_estate_streltsy_ownership:0 "Streletskaya Land Ownership"
  #Privileges
+ X_RUS_estate_streltsy_privilege_1:0 "Streltsy Privilege 1 Placeholder"
+ X_RUS_estate_streltsy_privilege_1_desc:0 ""
  X_estate_cossacks_privilege_1:0 "Establish Cossack Border Guards"
  X_estate_cossacks_privilege_1_desc:0 ""
  X_estate_cossacks_privilege_2:0 "Hire Cossack Raiders"
