--- a/localisation/leviathan_l_english.yml
+++ b/localisation/leviathan_l_english.yml
@@ -1366,7 +1366,7 @@
  cahokia:0 "Cahokia"
  cartagena_de_indias:0 "Cartagena de Indias Fort System"
  chan_chan_citadel:0 "Chan Chan Citadel"
- doges_palace:0 "Doges Palace" #X
+ doges_palace:0 "Doges Palace"
  duomo_milano:0 "Duomo di Milano"
  dutch_polders:0 "Dutch Polders"
  ellora_caves:0 "Ellora Caves"
