--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -686,7 +686,7 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  default_parliament_name:0 "Parliament"
  opinion_theocracy_noble:0 "Same Dynasty as Heir"
  devotion:0 "Devotion"
- meritocracy:0 "Horde Unity" #X
+ meritocracy:0 "Meritocracy"
  overseas_port:0 "Overseas Port"
  port:0 "Port"
  backing_war_effort:0 "Support the War Effort"
@@ -1050,7 +1050,7 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  ADM_SCORE_STABILITY:0 "Stability: $VAL$\n"
  ADM_SCORE_PRESTIGE:0 "Prestige: $VAL$\n"
  ADM_SCORE_DEVOTION:0 "Devotion: $VAL$\n"
- ADM_SCORE_MERITOCRACY:0 "Horde Unity: $VAL$\n" #X
+ ADM_SCORE_MERITOCRACY:0 "Meritocracy: $VAL$\n"
  ADM_SCORE_LEGITIMACY:0 "Legitimacy: $VAL$\n"
  ADM_SCORE_UNITY:0 "Horde Unity: $VAL$\n"
  ADM_SCORE_REPTRAD:0 "Republican Tradition: $VAL$\n"
@@ -1185,10 +1185,10 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  HRE_NUM_PRINCES_IMPACT:0 "There are currently §Y$CURR$§! member states in the Empire out of the §Y$NEED$§! needed to maintain legitimacy. This changes Imperial Authority by $VAL$ every month."
  LACK_OF_ELECTORS:0 "There are only §Y$CURR$§! electors in the empire, and there needs to be §Y$NEED$§! for it to function properly. Therefore the Imperial Authority is decreased by §R$VAL$§! every month."
  VASSALIZED_ELECTORS:0 "§Y$CURR$§! of the electors in the empire are subject states. Therefore the Imperial Authority is decreased by §R$VAL$§! every month."
- ENACT_DECREE_ONLY_ONE:0 "Only one yarlig can be enacted at once, and they cannot be canceled before their end date.\n" #X
- ENACT_DECREE_NOT_EMPEROR:0 "Only the Great Khan can enact Yarlig." #X
+ ENACT_DECREE_ONLY_ONE:0 "Only one decree can be enacted at once, and they cannot be canceled before their end date.\n"
+ ENACT_DECREE_NOT_EMPEROR:0 "Only the Emperor can enact Decrees."
  ENACT_DECREE_ALREADY_ENACTED:0 "$DECREENAME$ already enacted. It will run out on $DATE|Y$."
- ENACT_DECREE_NOT_ENOUGH_MERITOCRACY:0 "Enacting this Decree requires $MERITOCRACYREQUIRED$ Horde Unity, you only have $CURRENTMERITOCRACY$." #X
+ ENACT_DECREE_NOT_ENOUGH_MERITOCRACY:0 "Enacting this Decree requires $MERITOCRACYREQUIRED$ Meritocracy, you only have $CURRENTMERITOCRACY$."
  CAN_NOT_ENACT_REFORM_NOT_EMPEROR:0 "Only the emperor can enact reforms in the empire."
  CAN_NOT_ENACT_REFORM_LEAGUES:0 "Cannot enact reforms during religious conflict in the empire."
  MUST_BE_AT_PEACE_IMP_REFORM:0 "You cannot enact reforms when you are at war!"
@@ -1392,10 +1392,10 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  navy_tradition:0 "Navy Tradition"
  MIL_DEFENSIVENESS:0 "Defensiveness"
  POOL_HAS_MP:0 "With §Y$POOL$§! men awaiting recruitment, our manpower pool cannot grow to be bigger than §Y$MAX$§!."
- YEARLY_MERITOCRACY:0 "Yearly Horde Unity" #X
- MERITOCRACY_IRO:0 "§YHorde Unity§!\nHorde Unity changes by $CHANGE$ every year due to:\n$WHY$" #X
- YOU_MERITOCRACY_DRO:1 "Horde Unity is a measure of the how much support a Khan has from the tribes. The higher it is, the more unified the nation, thus the more efficient our nation will run!\nIt can be increased through Strengthening Government, ideas, policies or events.\nThis level of Horde Unity gives the following effects:" #X
- THEY_MERITOCRACY_DRO:0 "Horde Unity is a measure of the how much support a Khan has from the tribes. The higher it is, the more unified their nation, thus the more efficient it will run!\nThis level of Horde Unity gives the following effects:" #X
+ YEARLY_MERITOCRACY:0 "Yearly Meritocracy"
+ MERITOCRACY_IRO:0 "§YMeritocracy§!\nMeritocracy changes by $CHANGE$ every year due to:\n$WHY$"
+ YOU_MERITOCRACY_DRO:1 "This represents the bureaucratic competence inside our country. The higher it is, the more efficient our nation will run!\nIt can be increased through Strengthening Government, ideas, policies or events.\nThis level of Meritocracy gives the following effects:"
+ THEY_MERITOCRACY_DRO:0 "This represents the bureaucratic competence inside their country. The higher it is, the more efficient their nation will run!\nThis level of Meritocracy gives the following effects:"
  DEVOTION_EFFECT:0 "$DIRECTION$ $VALUE$ Devotion.\n"
  HAVE_DEVOTION_LESS_THAN:0 "Have less Devotion than "
  HAVE_DEVOTION_MORE_THAN:0 "Have Devotion of at least "
@@ -1861,14 +1861,14 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  STR_LEGITIMACY:0 "gain $VAL|G$ Legitimacy"
  STR_REPUBLIC:0 "gain $VAL|G$ Republican Tradition"
  STR_DEVOITION:0 "gain $VAL|G$ Devotion"
- STR_MERITOCRACY:0 "gain $VAL|G$ Horde Unity" #X
+ STR_MERITOCRACY:0 "gain $VAL|G$ Meritocracy"
  STRENGTHEN_GOVERNMENT:0 "Strengthen Government"
  STRGOVTTITLE:0 "Strengthen Government"
  STR_GOV_ALREADY_MAX_HORDE_UNIT:0 "Horde Unity is already at its highest!"
  STR_GOV_ALREADY_MAX_LEGITIMACY:0 "Legitimacy is already at its highest!"
  STR_GOV_ALREADY_MAX_REP_TRAD:0 "Republican Tradition is already at its highest!"
  STR_GOV_ALREADY_MAX_DEVOTION:0 "Devotion is already at its highest!"
- STR_GOV_ALREADY_MAX_MERITOCRACY:0 "Horde Unity is already at its highest!" #X
+ STR_GOV_ALREADY_MAX_MERITOCRACY:0 "Meritocracy is already at its highest!"
  DISINHERIT_NOT_MONARCHY:0 "You can only Disinherit an Heir in a Monarchy!"
  DISINHERIT_NOT_DURING_REGENCY:0 "It is not possible to Disinherit an Heir during a Regency!"
  DISINHERIT_LOW_PRESTIGE:0 "Prestige needs to be at least $NEED|Y$ to be able to disinherit an heir."
@@ -1893,7 +1893,7 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  ARE_YOU_SURE_PASS_REFORM:0 "Are you sure you want to enact $REFORMTITLE|Y$?\n"
  ARE_YOU_SURE_PASS_DECREE:0 "Are you sure you want to enact $TITLE|Y$?\n"
  ENACT_REFORM_COST_DESC:0 "This will cost us $STABILITY|R$ Stability and $MANDATE|R$ Legacy, and give us the following long term effects:\n$EFFECTS$"
- ENACT_DECREE_COST_DESC:0 "This will cost us $MERITOCRACYCOST|R$ Horde Unity, and give us the following effects for $YEARS|Y$ years:\n$EFFECTS$" #X
+ ENACT_DECREE_COST_DESC:0 "This will cost us $MERITOCRACYCOST|R$ Meritocracy, and give us the following effects for $YEARS|Y$ years:\n$EFFECTS$"
  ACCEPTED_CULTURES_MAX_COUNT:0 "Promoted Culture Slots"
  ACCEPTED_CULTURES_COUNT:0 "Promoted Cultures: $CURR$/$MAX$"
  ACCEPTED_CULTURE_SLOTS_DESC:0 "You have $FREE|Y$ of $MAX|Y$ free Promoted Culture slots.\nTo promote a culture, click the §Y"Promote Culture"§! button on a Non-Accepted Culture.\nThe number of slots is calculated from:\n"
@@ -4959,7 +4959,7 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  alert_age_can_spend_splendor_instant:0 "§YCan purchase an ability§!"
  alert_age_can_spend_splendor_delayed:0 "Your level of Splendor is currently high enough to be able to purchase an Ability."
  alert_can_enact_decree_instant:0 "§YCan enact a Decree!§!"
- alert_can_enact_decree_delayed:0 "Your level of Horde Unity is currently high enough to be able to enact a Decree." #X
+ alert_can_enact_decree_delayed:0 "Your level of Meritocracy is currently high enough to be able to enact a Decree."
  alert_can_use_russian_ability_instant:0 "§YCan use a Russian ability!§!"
  alert_can_use_russian_ability_delayed:0 "$POWERS|Y$ can currently be used."
  alert_can_use_cossacks_ability_instant:0 "§YCan use a Cossacks ability!§!"
