--- a/localisation/government_l_english.yml
+++ b/localisation/government_l_english.yml
@@ -265,8 +265,8 @@
  mechanic_is_elective_no:0 "New monarch is not elected."
  mechanic_has_devotion_yes:0 "Uses Devotion."
  mechanic_has_devotion_no:0 "Does not use Devotion."
- mechanic_has_meritocracy_yes:0 "Uses Horde Unity." #X
- mechanic_has_meritocracy_no:0 "Does not use Horde Unity." #X
+ mechanic_has_meritocracy_yes:0 "Uses Meritocracy."
+ mechanic_has_meritocracy_no:0 "Does not use Meritocracy."
  mechanic_maintain_dynasty_yes:0 "Has a fixed dynasty."
  mechanic_maintain_dynasty_no:0 "Does not have a fixed dynasty."
  mechanic_has_harem_yes:0 "Ruler has a harem."
