--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -18,6 +18,10 @@
  X_RUS_estate_streltsy_privilege_1_desc:0 ""
  X_RUS_estate_streltsy_privilege_2:0 "Establish Gulyaygorod Tactics"
  X_RUS_estate_streltsy_privilege_2_desc:0 ""
+ X_RUS_estate_streltsy_privilege_3:0 "Restrict Landed Streltsy"
+ X_RUS_estate_streltsy_privilege_3_desc:0 ""
+ X_RUS_estate_streltsy_privilege_4:0 "Tolerare Old Believers"
+ X_RUS_estate_streltsy_privilege_4_desc:0 ""
  X_estate_cossacks_privilege_1:0 "Establish Cossack Border Guards"
  X_estate_cossacks_privilege_1_desc:0 ""
  X_estate_cossacks_privilege_2:0 "Hire Cossack Raiders"
@@ -36,8 +40,12 @@
  X_estate_burghers_privilege_1_on_granted_tt:0 "Every owned province producing §YSlaves§! gains '§YKhan's Savga§!', giving the following effects:\nLocal Production Efficiency: §G+75.0%§!"
  X_estate_burghers_privilege_1_on_revoked_tt:0 "Remove '§YKhan's Savga§!' from every owned province producing §YSlaves§!."
  #Modifiers
- X_RUS_estate_streltsy_privilege_1_cmod:0 "Gulyaygorod Tactics"
- desc_X_RUS_estate_streltsy_privilege_1_cmod:0 ""
+ X_RUS_estate_streltsy_privilege_2_cmod:0 "Gulyaygorod Tactics"
+ desc_X_RUS_estate_streltsy_privilege_2_cmod:0 ""
+ X_RUS_estate_streltsy_privilege_3_cmod:0 "Desire for Combat"
+ desc_X_RUS_estate_streltsy_privilege_3_cmod:0 ""
+ X_RUS_estate_streltsy_privilege_4_cmod:0 "Honored Traditions"
+ desc_X_RUS_estate_streltsy_privilege_4_cmod:0 ""
  X_estate_cossacks_privilege_1_pmod:0 "Cossack Border Defense"
  desc_X_estate_cossacks_privilege_1_pmod:0 ""
  X_estate_cossacks_privilege_2_pmod:0 "Cossack Raid"
