--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -20,7 +20,7 @@
  X_RUS_estate_streltsy_privilege_2_desc:0 ""
  X_RUS_estate_streltsy_privilege_3:0 "Restrict Landed Streltsy"
  X_RUS_estate_streltsy_privilege_3_desc:0 ""
- X_RUS_estate_streltsy_privilege_4:0 "Tolerare Old Believers"
+ X_RUS_estate_streltsy_privilege_4:0 "Tolerate Old Believers"
  X_RUS_estate_streltsy_privilege_4_desc:0 ""
  X_RUS_estate_streltsy_privilege_5:0 "Ease Treasury Burden"
  X_RUS_estate_streltsy_privilege_5_desc:0 ""
